# udemy-courses

./: README.md
C++/: ConceitoVariavel.cpp  ConceitoVariavel.dev  ConceitoVariavel.layout  Ex1Lista1.dev  Lista 2.dev  Lista 2.layout  Makefile.win  PrimeiroCodigo.cpp  mainEx1L1.cpp
cmake/04-creating-executable/: CMakeLists.txt  ExampleClass.cpp  ExampleClass.h  main.cpp
cmake/21-installing-basics/: CMakeLists.txt
cmake/21-installing-basics/cmake/: AddSanitizationOption.cmake
cmake/21-installing-basics/doc/: CMakeLists.txt  Doxyfile-alternative.in  Doxyfile.in
cmake/21-installing-basics/src/: CMakeLists.txt
cmake/21-installing-basics/src/application/: CMakeLists.txt  ExampleClass.cpp  ExampleClass.h  main.cpp
cmake/21-installing-basics/src/calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h
cmake/21-installing-basics/src/calculator/test/: CMakeLists.txt  CalculatorTests.cpp
